--- a/wordpress/wp-content/themes/skillcrushstarter/style.css
+++ b/wordpress/wp-content/themes/skillcrushstarter/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name: Skillcrush Starter Theme -- 00 Activate the Skillcrush Starter Theme Challenge
+Theme Name: Skillcrush Starter Theme -- 03 Style Up Your Sidebar Challenge
 Author: The Skillcrush Team
 Author URI: http://skillcrush.com
-Description: This theme is for use in Skillcrush 103, Skillcrush 203 and the Skillcrush WordPress Developer Career Blueprint.
+Description: This theme is for use in Skillcrush 103. Revisions since the last version include: adding SIDEBAR STYLES to the style.css file (including the optional "#sidebar .widget_text img {border-radius: 50%;}").
 Version: 2.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
@@ -64,16 +64,16 @@ table {
 }
 
 /** Clearfix **/
- .clearfix:before,
- .clearfix:after {
-     content: " ";
-     display: table;
-	 table-layout: fixed;
- }
+.clearfix:before,
+.clearfix:after {
+	content: " ";
+	display: table;
+	table-layout: fixed;
+}
 
- .clearfix:after {
-     clear: both;
- }
+.clearfix:after {
+	clear: both;
+}
 /** end CSS reset **/
 
 /** theme styles start here! **/
@@ -569,5 +569,12 @@ body {
 #sidebar .widget_categories ul li a,
 #sidebar .widget_archive ul li a {
 	color: #3b3b3b;
+}
+#sidebar .wpp-excerpt {
+	font-size: .75em;
+	font-weight: normal;
+}
+#sidebar .wpp-thumbnail {
+	width: 15px;
 }
 /* End SIDEBAR STYLES */
