--- a/wordpress/wp-content/themes/skillcrushstarter/style.css
+++ b/wordpress/wp-content/themes/skillcrushstarter/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name: Skillcrush Starter Theme -- 03 Style Up Your Sidebar Challenge
+Theme Name: Skillcrush Starter Theme -- 06 Single Blog Posts and Fix the Loop Challenge
 Author: The Skillcrush Team
 Author URI: http://skillcrush.com
-Description: This theme is for use in Skillcrush 103. Revisions since the last version include: adding SIDEBAR STYLES to the style.css file (including the optional "#sidebar .widget_text img {border-radius: 50%;}").
+Description: This theme is for use in Skillcrush 103. Revisions since the last version include: adding the category.php file from the previous "Fix the loop" challenge, adding the single.php and comments.php files, adding the "custom markup for post comments" function to the functions.php file, adding SINGLE POST STYLES to the style.css file.
 Version: 2.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
@@ -570,13 +570,6 @@ body {
 #sidebar .widget_archive ul li a {
 	color: #3b3b3b;
 }
-#sidebar .wpp-excerpt {
-	font-size: .75em;
-	font-weight: normal;
-}
-#sidebar .wpp-thumbnail {
-	width: 15px;
-}
 /* End SIDEBAR STYLES */
 
 /* NEXT / PREV STYLES */
@@ -637,7 +630,6 @@ body {
 	}
 }
 /* End NEXT / PREV STYLES */
-
 
 /* SINGLE POST STYLES */
 .single .post-entry {
